Tools/WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm
@@ -42,6 +42,9 @@ void InjectedBundle::platformInitialize(WKTypeRef)
     static const int NoFontSmoothing = 0;
     static const int BlueTintedAppearance = 1;
 
+    // Work around missing /etc/catalog <rdar://problem/4292995>.
+    setenv("XML_CATALOG_FILES", "", 0);
+
     // Language was set up earlier in main(). Don't clobber it.
     NSArray *languages = [[[NSUserDefaults standardUserDefaults] volatileDomainForName:NSArgumentDomain] valueForKey:@"AppleLanguages"];
     if (!languages)
